+ FOS\JsRoutingBundle: support routing in js + add document + del document + option box, to confirm delete with/without files + read options params from symfony2's YAML-file: services.yml + 2 file type icons: 7z, jpg + addDoc: autogeneration of doc title from filename (if title was empty) ~ fix OS FS dependent things: dir separator, absolute paths etc ~ support cyrillic filenames in windows ~ fix workaround for mozilla in custombox with tranform:translate ~ fix custombox: glue for GET params choice depending of whether they was empty or not - del button in FileManager

--- a/Symfony/src/Big/ElibreBundle/Resources/public/css/jquery.custombox.css
+++ b/Symfony/src/Big/ElibreBundle/Resources/public/css/jquery.custombox.css
@@ -35,9 +35,9 @@
     -moz-backface-visibility: hidden;
     -ms-backface-visibility: hidden;
     backface-visibility: hidden;
-    -webkit-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
+/*    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);*/
+    /*transform: translateY(-50%);*/
 }
 .custombox-modal {
     height: auto;
