--- a/Symfony/src/Big/ElibreBundle/Resources/views/Default/index.html.twig
+++ b/Symfony/src/Big/ElibreBundle/Resources/views/Default/index.html.twig
@@ -7,6 +7,8 @@
     <script src="{{ asset('bundles/bigelibre/js/jquery-1.9.1.js') }}"></script>
     <script src="{{ asset('bundles/bigelibre/js/jquery-ui-1.10.3.custom.min.js') }}"></script>
     <script src="{{ asset('bundles/bigelibre/js/jquery.custombox.js') }}"></script>
+    <script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
+    <script src="{{ path('fos_js_routing_js', {"callback": "fos.Router.setData"}) }}"></script>
     <script src="{{ asset('bundles/bigelibre/js/func.js') }}"></script>
     <title>
       Электронная библиотека | Николаевский центр подготовки плавсостава
