--- a/Symfony/src/Big/ElibreBundle/Resources/views/admin/index_ajax.html.twig
+++ b/Symfony/src/Big/ElibreBundle/Resources/views/admin/index_ajax.html.twig
@@ -1,7 +1,5 @@
 <link href="{{ asset('bundles/bigelibre/css/admin/admin.css') }}" rel="stylesheet" />
 <script src="{{ asset('bundles/bigelibre/js/jquery-1.9.1.js') }}"></script>
-<script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
-<script src="{{ path('fos_js_routing_js', {"callback": "fos.Router.setData"}) }}"></script>
 {#<script>
   alert('index_ajax');
 </script>#}
@@ -9,6 +7,8 @@
 {% endblock %}
 
 {% block content %}
+{#<div style='position:relative;left:0px;top:0px; background-color: red;'>#}
   {{ content|raw }}
+{#</div>#}
 {% endblock %}
 
