--- a/Symfony/src/Big/ElibreBundle/Resources/views/fm/fm.html.twig
+++ b/Symfony/src/Big/ElibreBundle/Resources/views/fm/fm.html.twig
@@ -12,8 +12,10 @@ $(function() {
   //var FM = new FileManager();
   new FileManager().init();
 
+  
+
   $("#fileuploader").uploadFile({
-    url: "http://172.18.1.12:8080/app_dev.php/fm/upload",
+    url: Routing.generate('big_elibre_fm_actions', { action: 'upload' }),
 //    fileName: "myfile",
     onSubmit: function(files) {
       this.formData.path = new FileManager().currentPath;
@@ -44,10 +46,10 @@ $(function() {
     {% block toolbar %}
   <div class="FMToolBox">
 {#    <a href="#" onclick="new FileManager().uploadDialog();return false;">Upload file...</a>#}
-    <a href="#" onclick="new FileManager().delete();
+{#    <a href="#" onclick="new FileManager().delete();
         return false;">Delete</a>
     <br>
-    Directory: <span id="currentPath">{{ path }}</span>
+#}    Directory: <span id="currentPath">{{ path }}</span>
   </div>
     {% endblock %}
 
