--- a/Symfony/src/Big/ElibreBundle/Resources/views/admin/addDoc.html.twig
+++ b/Symfony/src/Big/ElibreBundle/Resources/views/admin/addDoc.html.twig
@@ -47,7 +47,7 @@
       </tr>
       <tr>
         <td>Theme:</td>
-        <td>{{ form_widget(addDocForm.theme_id) }} {{ theme.title }}</td>
+        <td>{{ form_widget(addDocForm.theme) }} {{ theme.title }}</td>
       </tr>
     </table>
 
